[gd_scene load_steps=8 format=3 uid="uid://bnxj7rhwgcg67"]

[ext_resource type="Script" uid="uid://iucd1sfk2lb6" path="res://game/main.gd" id="1_ig7tw"]
[ext_resource type="Shader" uid="uid://7nwccalo1ysn" path="res://game/assets/shaders/animated.gdshader" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://ci7gwrmywq748" path="res://game/assets/settings_panel.gd" id="3_emt18"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="3_vop5m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h2yge"]
shader = ExtResource("2_0xm2m")
shader_parameter/color1 = Color(0.101961, 0.101961, 0.180392, 0.121569)
shader_parameter/color2 = Color(0.0862745, 0.129412, 0.243137, 0.0705882)
shader_parameter/accent_color = Color(0.31, 0.804, 0.769, 0.3)
shader_parameter/wave_speed = 0.5
shader_parameter/wave_amplitude = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.458824)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="Theme" id="Theme_7dm0k"]
MarginContainer/constants/margin_bottom = 20
MarginContainer/constants/margin_left = 20
MarginContainer/constants/margin_right = 20
MarginContainer/constants/margin_top = 20
PanelContainer/styles/panel = SubResource("StyleBoxFlat_0xm2m")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_h2yge")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7dm0k")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
text = "[b][i][font_size=64][color=#2c2c2c]Color Club: Coloring Game"
fit_content = true
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
modulate = Color(0.180005, 0.180005, 0.180005, 1)
layout_mode = 2
text = "Play"
flat = true

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
modulate = Color(0.180005, 0.180005, 0.180005, 1)
layout_mode = 2
text = "Credits"
flat = true
script = ExtResource("3_vop5m")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="AddOnlineButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
modulate = Color(0.19076231, 0.19076234, 0.19076231, 1)
layout_mode = 2
theme_type_variation = &"PlayButton"
text = "Try an online svg"
flat = true
script = ExtResource("3_vop5m")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.8

[node name="LevelSelectContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelSelectContainer"]
layout_mode = 2

[node name="Container" type="ScrollContainer" parent="MarginContainer/VBoxContainer/LevelSelectContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LevelSelectContainer/MarginContainer/Container"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/LevelSelectContainer/MarginContainer/Container/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.8

[node name="PicContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/LevelSelectContainer/MarginContainer/Container/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/LevelSelectContainer/MarginContainer/Container/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.8

[node name="SettingsPanel" type="PanelContainer" parent="MarginContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("3_emt18")
metadata/_custom_type_script = "uid://ci7gwrmywq748"

[node name="VBox" type="VBoxContainer" parent="MarginContainer/SettingsPanel"]
layout_mode = 2

[node name="StrokeColoringCheck" type="CheckBox" parent="MarginContainer/SettingsPanel/VBox"]
layout_mode = 2
text = "Stroke color Check"

[node name="AutoColorCheck" type="CheckBox" parent="MarginContainer/SettingsPanel/VBox"]
layout_mode = 2
text = "Auto color Strokes"

[node name="StrokeColorPicker" type="ColorPickerButton" parent="MarginContainer/SettingsPanel/VBox"]
visible = false
layout_mode = 2

[node name="AutoColorStrokesButton" type="CheckButton" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -545.0
offset_top = -53.0
offset_right = -324.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
text = "Auto color strokes"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
